tests/baselines/reference/functionOverloads15.errors.txt
tests/cases/compiler/functionOverloads15.ts(1,1): error TS2463: Duplicate overload signature for foo.
tests/cases/compiler/functionOverloads15.ts(2,1): error TS2463: Duplicate overload signature for foo.


==== tests/cases/compiler/functionOverloads15.ts (2 errors) ====
    function foo(foo:{a:string; b:number;}):string;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo.
    function foo(foo:{a:string; b:number;}):number;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo.
    function foo(foo:{a:string; b?:number;}):any { return "" }
    